--- a/moonwave.toml
+++ b/moonwave.toml
@@ -1,3 +1,3 @@
 gitSourceBranch = "main"
 url = "https://bluwarerbx.github.io/bluware.github.io/"
-baseUrl = "/projectName"
+baseUrl = "/bluware.github.io/"
